--- a/app/src/main/res/layout/item_publicacion.xml
+++ b/app/src/main/res/layout/item_publicacion.xml
@@ -4,34 +4,35 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:layout_marginBottom="8dp">
 
     <TextView
         android:id="@+id/tvNombreUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="@android:color/darker_gray"
-        android:paddingBottom="4dp"/>
+        android:paddingBottom="4dp"
+        android:textColor="#F06292"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/tvFechaCreacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         android:textColor="@android:color/darker_gray"
-        android:paddingBottom="4dp"/>
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tvTexto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:padding="4dp"/>
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/ivImagen"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:visibility="gone"/> 
+        android:visibility="gone"/>
+
 </LinearLayout>
