--- a/app/src/main/res/layout/item_publicacion.xml
+++ b/app/src/main/res/layout/item_publicacion.xml
@@ -33,24 +33,30 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:paddingTop="8dp">
+
         <Button
             android:id="@+id/btnLike"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#21F06292"
+            android:backgroundTint="@color/like_button_color"
             android:text="Like"
-            android:textColor="#F06292"
-            app:cornerRadius="8dp" />
+            android:textColor="@android:color/white"
+            app:cornerRadius="8dp"
+            android:layout_marginEnd="8dp"/>
+
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
+
         <TextView
             android:id="@+id/tvLikesCount"
             android:layout_width="wrap_content"
