--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E7E7E7</color>
+    <color name="like_button_color">#F06292</color>
+    <color name="like_button_disabled_color">#FFCCCCCC</color>
 </resources>
