--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-
         android:layout_margin="16dp"
         android:backgroundTint="#00FFFFFF"
         android:text="Regresar"
@@ -25,7 +24,10 @@
         android:layout_height="wrap_content"
         android:columnCount="1"
         android:rowCount="4"
-        android:padding="16dp">
+        android:layout_gravity="center"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:id="@+id/ivProfileImage"
@@ -41,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Usuario"
-            android:layout_gravity="start"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -51,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Descripción del usuario"
-            android:layout_gravity="start"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="4dp"
             android:textSize="14sp" />
 
